syntax = "proto3";

package operator.pxresourcegateway;

option go_package = "/;pxresourcegateway";
option java_multiple_files = true;
option java_package = "com.operator.pxresourcegateway";
option java_outer_classname = "PxResourceGatewayProto";

// SemaphoreService provides a counting semaphore to limit access to resources
// and a priority queue to distinguish between different types of clients/requests
service SemaphoreService {
  // AcquireLock acquires a semaphore lock or reserves a place in the queue for the resource
  rpc CreateResource(CreateResourceRequest)
    returns (CreateResourceResponse) {}

    // AcquireLock acquires a semaphore lock or reserves a place in the queue for the resource
  rpc AcquireLock(AcquireLockRequest)
    returns (AcquireLockResponse) {}

  // ReleaseLock releases the semaphore lock on the resource
  rpc ReleaseLock (ReleaseLockRequest)
  returns (ReleaseLockResponse) {}

  // KeepAlive sends a heartbeat to the semaphore service to keep the lock alive
  rpc KeepAlive (KeepAliveRequest)
  returns (KeepAliveResponse) {}
}

// SemaphoreAccessPriority specifies the priority of the client's access to the resource
message SemaphoreAccessPriority {
  // Type of priority
  enum Type {
    // Unspecified, do NOT use
    TYPE_UNSPECIFIED = 0;
    // Enqueued to low priority queue
    LOW = 1;
    // Enqueued to medium priority queue
    MEDIUM = 2;
    // Enqueued to high priority queue
    HIGH = 3;
  }
}

// SemaphoreAccessStatus specifies the status of the client's access to the resource
message SemaphoreAccessStatus{
  // Type of status
  enum Type {
    // Unspecified, do NOT use
    TYPE_UNSPECIFIED = 0;
    // Resource is queued
    QUEUED = 1;
    // Resource is locked
    LOCKED = 2;
  }
}

// CreateResourceRequest is the request to create a new semaphore resource
message CreateResourceRequest {
  // Resource ID of the new semaphore resource
  string resource_id = 1;
  // Number of locks that can be acquired for the resource
  uint32 n_locks = 2;
  // Max duration for which a lock can be held
  uint64 lock_hold_timeout = 3;
}

// CreateResourceResponse is the response to create a new semaphore resource
message CreateResourceResponse {}

// AcquireLockRequest is the request to acquire a semaphore lock
message AcquireLockRequest {
  // Resource ID to acquire the lock for
  string resource_id = 1;
  // Client ID to acquire the resource for
  string client_id = 2;
  // Priority of the client's access to the resource
  SemaphoreAccessPriority.Type access_priority = 3;
}

// AcquireLockResponse is the response to acquire a semaphore lock
message AcquireLockResponse {
  // Status of the client's access to the resource
  SemaphoreAccessStatus.Type access_status = 1;
}

// ReleaseLockRequest is the request to release a semaphore lock
message ReleaseLockRequest {
  // Resource ID to release the lock for
  string resource_id = 1;
  // Client ID to release the resource for
  string client_id = 2;
}

// ReleaseLockResponse is the response to release a semaphore lock
message ReleaseLockResponse {}

// KeepAliveRequest is the request to send a heartbeat to the semaphore service
message KeepAliveRequest {
  // Resource ID to keep the lock alive for
  string resource_id = 1;
  // Client ID to keep the lock alive for
  string client_id = 2;
}

// KeepAliveLockResponse is the response to keep a semaphore lock alive
message KeepAliveResponse {
  // Status of the client's access to the resource
  SemaphoreAccessStatus.Type access_status = 1;
}
